--- a/student_life_management/templates/auth/dashboard.html
+++ b/student_life_management/templates/auth/dashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Dashboard - Smart Student Life</title>
-
+// Hii
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
