--- a/student_life_management/templates/auth/dashboard.html
+++ b/student_life_management/templates/auth/dashboard.html
@@ -105,7 +105,7 @@
 <div id="sidebar" class="sidebar">
     <a href="{% url 'schedule' %}">📅 Schedule</a>
     <a href="{% url 'stress_check' %}">🧠 Stress Check</a>
-    <a href="#">💰 Expenses</a>
+    <a href="{% url 'expense_dashboard' %}">💰 Expenses</a>
     <a href="#">🎓 Career Guide</a>
     <a href="#">🤝 Alumni Network</a>
 </div>
